# maliit-cutie-keyboard

./: CMakeLists.txt
qml/: cutie-keyboard.qml
qml/org/cutieshell/: CharacterKey.qml  FunctionKey.qml  InputHandler.qml  KeyBase.qml  KeyboardBase.qml  KeyboardLandscape.qml  KeyboardPortrait.qml  LandscapeCharacterKey.qml  Popper.qml  PortraitCharacterKey.qml
